# CustomerCenter

./: .env.example  README.md  alembic.ini  database_setup.py  main.py  prompt.txt  pyproject.toml  requirements.txt  test.db
.config/uv/: setup.sh
alembic/: env.py
alembic/versions/: 0001_initial_outreach_schema.py  0002_change_uuid_generation.py  0003_fix_duplicate_columns.py  0004_fix_leads_campaign_id.py  0005_create_test_schema.py  0006_merge_heads.py  0007_add_linkedin_data.py  2528d2545bc5_added_dataset_id_and_run_data_points.py  373f875e65ce_changed_data_types.py  454fc965a49b_moved_dataset_id_and_run_data_points_to_.py  487ee4e3bb84_moved_dataset_id_and_run_data_points_to_.py  d1cd1f32d6ed_merge_heads.py
cli/: __init__.py  check_connection.py  create_campaign.py
docs/: Alembic_Guide.md  DB-v0.txt  ddd.md  prd.md
outreach/: __init__.py  config.py  crud.py  database.py  draft-prompts.txt  models.py  sample_data.py  test_models.py
scripts/: setup_test_db.py
sql/: outreach_schema.sql
tests/: test_crud.py
